--- a/thankyou2.html
+++ b/thankyou2.html
@@ -19,8 +19,8 @@
         </div>
         <div class="window-body">
             <h1>Dear my sweetie pie!!</h1>
-            <p>Chinh chàoooooo <span id="guestName"></span>, sweetie pie của anhh.</p>
-            <p>Thông tin lễ tốt nghiệp:</p>
+            <p>Chinh chàoooooo <span id="guestName"></span>, em bé của anhh.</p>
+            <p>Đây là một món quà nho nhỏ anh làm cho Poa, nó cũng khá đơn giản nhưng mà anh hi vọng em sẽ thích.</p>
             <ul>
                 <li>Ngày: Thứ bảy, Ngày 22 Tháng 6 Năm 2024</li>
                 <li>Thời gian: 10:30 - 12:30</li>
@@ -62,11 +62,22 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade">
                     <!-- <div class="numbertext">1 / 3</div> -->
-                    <a href="map.jpg" download="tungtgay"><img src="map.jpg" style="width:100%"></a>
+                    <!-- <a href="map.jpg" download="tungtgay"><img src="map.jpg" style="width:100%"></a> -->
                     
                     <!-- <div class="text">Caption Text</div> -->
-                    <p class="text">đi bộ qua cũng được (not recommend tại vì trước sinh
-                        viên trường gửi ở đó nhi Nhưng mà nếuà giờ người ta gắt hơn rồi.ó khăn  khều nên lqua thì qua đỗ tạm cũng được)</p>
+                    <div class="gallery">
+                        <img src="144p.jpg" alt="144p">
+                        <div class="dropdown">
+                          <button class="dropbtn">144p</button>
+                          <div class="dropdown-content">
+                            <div onclick="changeImage('144p.jpg', '144p')">144p</div>
+                            <div onclick="changeImage('360p.jpg', '360p')">360p</div>
+                            <div onclick="changeImage('1080p.jpg', '1080p')">1080p</div>
+                            <div onclick="changeImage('4k.jpg', '4k')">4k</div>
+                          </div>
+                        </div>
+                      </div>
+                    <p class="text"> Poa trong mắt mình thế nào?</p>
                 </div>
             
                 <div class="mySlides fade">
