--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>Nàooo! em định bỏ trốn bỏ anh đúng hăm em Poa. Ai choaaaaaaa</p>
             </div>
             <div class="popup-footer">
-                <button class="popup-close" onclick="hidePopup()">I'll be there...</button>
+                <button class="popup-close" onclick="hidePopup()">Quay lại điền choa đát đì nhanh lơn...</button>
             </div>
         </div>
     </div>
