--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Em POa Yeu Dau</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/1791/1791307.png">
+    
 </head>
 <body>
     <div class="window">
